# cassandra

./: .env.example  .gitignore  LICENSE  README.md  claude_context.sh  eslint.config.mjs  package-lock.json  package.json  prompt_context.txt
data-agent/: .env.example  README.md  main.py  pyproject.toml  settings.py
prisma/: schema.prisma
prisma/migrations/20250908170149_init/: migration.sql
prisma/migrations/20250912231200_init/: migration.sql
src/app/: globals.css  layout.tsx  page.tsx
src/app/(pages)/: page.tsx
src/app/(pages)/browse/: layout.tsx  page.tsx
src/app/(pages)/browse/[id]/: page.tsx
src/app/(pages)/browse/[id]/_components/: interview-client.tsx
src/app/(pages)/browse/_components/: failure-card.tsx  search-input.tsx  smart-pagination.tsx
src/app/(pages)/dashboard/: layout.tsx  page.tsx
src/app/api/analyze/: route.ts
src/app/api/interview/: route.ts
src/app/api/report/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/components/: CassandraLogo.tsx  DashboardContext.tsx  FaviconLink.tsx  FaviconPreview.tsx  KimiLogo.tsx  Logo.tsx  PitchNode.tsx  ThemeToggle.tsx
src/components/ui/: scroll-area.tsx
src/hooks/: use-audio-input.ts  use-debounce.ts
src/lib/: embedding.ts  prisma.ts  utils.ts
