[project]
name = "data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "certifi>=2025.8.3",
    "google-generativeai>=0.8.5",
    "mysql-connector-python>=9.4.0",
    "openai>=1.106.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.11",
]
